--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+  <title>Luiz Eduardo</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Programador Full-Stack para suas necessidades">
-  <title>Luiz Eduardo</title>
+  <meta name="theme-color" content="#003f8c">
+  <meta property="og:image" content="/assets/icon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
