--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <meta name="theme-color" content="#003f8c">
   <meta property="og:image" content="/assets/icon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYHGDKGY3D"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QYHGDKGY3D');
+  </script>
 </head>
 
 <body>
