--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Programador Full-Stack para suas necessidades">
   <meta name="theme-color" content="#003f8c">
-  <meta property="og:image" content="/assets/icon.png" />
+  <meta property="og:image" content="/assets/icon_42x42.webp" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap" rel="stylesheet">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYHGDKGY3D"></script>
   <script>
